meshcentral/meshcentral-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meshcentral
  namespace: meshcentral
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: meshcentral
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: meshcentral
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: meshcentral
        image: ghcr.io/ylianst/meshcentral:latest@sha256:308f41768844580a81c37c1f2cc00c39fb57f617041469dedb8f84caed4a1485
        ports:
        - name: web
          containerPort: 4430
        - name: redir
          containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /opt/meshcentral/meshcentral-data
          subPath: data
        - name: data
          mountPath: /opt/meshcentral/meshcentral-files
          subPath: files
        - name: data
          mountPath: /opt/meshcentral/meshcentral-backups
          subPath: backups
        - name: data
          mountPath: /opt/meshcentral/meshcentral-web
          subPath: web
        - name: config
          mountPath: /opt/meshcentral/meshcentral-data/config.json
          subPath: config.json
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            memory: 1Gi
        readinessProbe:
          tcpSocket:
            port: 4430
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 4430
          initialDelaySeconds: 60
          periodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: meshcentral-data
      - name: config
        configMap:
          name: meshcentral-config
