meshcentral/meshcentral-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: meshcentral
  namespace: meshcentral
spec:
  selector:
    app: meshcentral
  ports:
    - name: web
      port: 4430
      protocol: TCP
      targetPort: 4430
  type: ClusterIP
