meshcentral/meshcentral-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meshcentral
  namespace: meshcentral
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/upstream-keepalive-timeout: "600"
    nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
spec:
  ingressClassName: nginx
  rules:
    - host: help.mdapi.ch
      http:
        paths:
          - backend:
              service:
                name: meshcentral
                port:
                  number: 4430
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - help.mdapi.ch
      secretName: meshcentral-cert
